--- a/index.html
+++ b/index.html
@@ -981,7 +981,7 @@ public getPastFromAPI(): Observable&lt;Launch[]&gt; {
 </blockquote>
 <p>The full code listing is below.</p>
 <pre><code class="lang-javascript">import { Injectable } from &quot;@angular/core&quot;;
-import { Launch } from &#39;../models/launch&#39;
+import { Launch } from &#39;../models/launch&#39;;
 import { HttpClient } from &#39;@angular/common/http&#39;;
 import &#39;rxjs/add/operator/map&#39;;
 import { Observable } from &quot;rxjs/Observable&quot;;
